--- a/WebApp/Views/Authentication/_LoginModal.cshtml
+++ b/WebApp/Views/Authentication/_LoginModal.cshtml
@@ -3,8 +3,8 @@
 
 <div class="modal-dialog">
     <div class="modal-content background--primary">
-        <div class=" form--heading">
-            <h4 class="text--primary">@Auth.Login</h4>
+        <div class="form--heading">
+            <h4 class="text--primary .form--group">@Auth.Login</h4>
         </div>
         <form id="loginForm" action="/Authentication/Login" method="post" class="form--content">
             <div class="modal-body">
@@ -21,22 +21,25 @@
                         <div id="loginFormMessage" class="text-danger" style="display:none;">@Auth.WrongCredentials</div>
 
             </div>
-            <div class="content--right">
-                    <button class="button button--primary button--rounded" type="submit">@Auth.Login</button>
-                    <a class="button button--primary button--rounded" asp-area="" asp-controller="Authentication" asp-action="Register">Register</a>
+            <div class="">
+                <input class="button button--secondary button--rounded button--smaller" type="submit" value="Reset password" formaction="/Authentication/SendResetPasswordMail" />
+                <button class="button button--primary button--rounded" type="submit">@Auth.Login</button>
             </div>
         </form>
         <form id="secondForm" action="/Authentication" method="post" class="form--content">
             <input type="hidden" id="CurrentUrl" name="url" />
             <input type="hidden" id="secondFormMail" name="mail" />
-            <div class="content--right">
-                
-                <input class="button button--primary button--rounded" type="submit" value="Google" formaction="/Authentication/LoginGoogle" />
-                <input class="button button--primary button--rounded " type="submit" value="Facebook" formaction="/Authentication/LoginFacebook" />
+            <div class="form--heading" style="display:flex; justify-content: space-between; flex-direction: column;">
+                <div class="form--group">
+                    <input class="button button--secondary button--rounded" type="submit" value="Google" formaction="/Authentication/LoginGoogle" />
+                </div>
+                <div class="form--group">
+                    <input class="button button--secondary button--rounded " type="submit" value="Facebook" formaction="/Authentication/LoginFacebook" />
+                </div>
             </div>
-            <div class="content--right ">
-                <input class="button button--primary button--rounded button--smaller" type="submit" value="Reset password" formaction="/Authentication/SendResetPasswordMail" />
-                <button type="button" class="button button--primary button--rounded button--smaller" onclick="HideModal()">@Shared.Close</button>
+            <div class="form--heading form--group" style="display:flex; justify-content: space-between; margin-bottom: 0;">
+                <a class="button button--secondary button--rounded" asp-area="" asp-controller="Authentication" asp-action="Register">Register</a>
+                <button type="button" class="button button--secondary button--rounded button--smaller" onclick="HideModal()">@Shared.Close</button>
             </div>
         </form>
     </div>
