--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -9,29 +9,24 @@ footer {
     flex-direction: row;
 }
 
-/*Wszystko inne...*/
-
 .button {
-    border: 3px solid;
-    font-weight: 600;
-    text-decoration: none;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin: 0.5vh 0.5vw;
+    border: 1px solid;
+    padding: 8px;
 
     &--rounded {
-        border-radius: 15px;
+        border-radius: 0.4rem;
     }
 
     &--squared {
         border-radius: 0%;
     }
+
+    &:hover {
+        transition-duration: 200ms;
+    }
 }
 
 .select {
-
     &--language {
         margin-right: 20px;
         border-radius: 15%;
@@ -270,4 +265,8 @@ input[type=file] {
             }
         }
     }
+}
+
+.modal-content {
+    border-radius: 0.8rem;
 }
