--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -12,6 +12,7 @@ footer {
 .button {
     border: 1px solid;
     padding: 8px;
+    transition-duration: 200ms;
 
     &--rounded {
         border-radius: 0.4rem;
@@ -21,8 +22,37 @@ footer {
         border-radius: 0%;
     }
 
-    &:hover {
-        transition-duration: 200ms;
+    &--no-border {
+        border: 0;
+    }
+
+    &--thin {
+        padding-top: 3px;
+        padding-bottom: 3px;
+    }
+
+    &--facebook {
+        width: 100%;
+        background-color: #1647ab;
+        border-color: transparent;
+        color: white;
+
+        &:hover {
+            background-color: #113682;
+            color: white;
+        }
+    }
+
+    &--google {
+        width: 100%;
+        background-color: white;
+        border-color: transparent;
+        color: #1a1a1a;
+
+        &:hover {
+            background-color: #e6e6e6;
+            color: #1a1a1a;
+        }
     }
 }
 
@@ -98,7 +128,7 @@ footer {
     }
 
     .form--input {
-        width: 66%;
+        width: 100%;
         display: inline-flex;
         margin-right: 0px;
         padding: 0.375rem 0.75rem;
@@ -108,11 +138,10 @@ footer {
         color: #212529;
         background-color: #fff;
         background-clip: padding-box;
-        border: 1px solid #ced4da;
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
-        border-radius: 0.25rem;
+        border-radius: 100px;
         transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     }
 
@@ -269,4 +298,8 @@ input[type=file] {
 
 .modal-content {
     border-radius: 0.8rem;
+}
+
+.modal-dialog{
+    max-width: 380px;
 }
