--- a/WebApp/wwwroot/Styles/dark.scss
+++ b/WebApp/wwwroot/Styles/dark.scss
@@ -12,7 +12,7 @@
 
             &:hover {
                 background-color: white;
-                color: #1a1a1a;
+                color: #0360EC;
             }
         }
 
@@ -24,6 +24,17 @@
             &:hover {
                 background-color: white;
                 color: #1a1a1a;
+            }
+        }
+
+        &--cancel {
+            background-color: #c21d11;
+            border-color: transparent;
+            color: white;
+
+            &:hover {
+                background-color: white;
+                color: #c21d11;
             }
         }
     }
@@ -69,5 +80,12 @@
         &--primary {
             border-color: aliceblue;
         }
+    }
+
+    .form--input {
+        color: white;
+        background-color: #1a1a1a;
+        box-shadow: inset 0 0px 5px 1px #00000082, 0 0px 3px 0px #00000082;
+        border: 0;
     }
 }
