--- a/WebApp/wwwroot/css/dark.css
+++ b/WebApp/wwwroot/css/dark.css
@@ -8,7 +8,7 @@
 }
 .dark-mode .button--primary:hover {
   background-color: white;
-  color: #1a1a1a;
+  color: #0360EC;
 }
 .dark-mode .button--secondary {
   background-color: #1a1a1a;
@@ -18,6 +18,15 @@
 .dark-mode .button--secondary:hover {
   background-color: white;
   color: #1a1a1a;
+}
+.dark-mode .button--cancel {
+  background-color: #c21d11;
+  border-color: transparent;
+  color: white;
+}
+.dark-mode .button--cancel:hover {
+  background-color: white;
+  color: #c21d11;
 }
 .dark-mode .text--primary {
   color: white;
@@ -42,4 +51,10 @@
 }
 .dark-mode .border--primary {
   border-color: aliceblue;
+}
+.dark-mode .form--input {
+  color: white;
+  background-color: #1a1a1a;
+  box-shadow: inset 0 0px 5px 1px #00000082, 0 0px 3px 0px #00000082;
+  border: 0;
 }
