deleted onerror image

--- a/WebApp/Views/Products/Details.cshtml
+++ b/WebApp/Views/Products/Details.cshtml
@@ -61,7 +61,7 @@
         }
     </dl>
 
-            <img src="/Uploads/image/@imageName" onerror="this.src='/image/NoImage.png'" style="max-width: 300px"/>
+            <img src="/Uploads/image/@imageName" style="max-width: 300px"/>
 
     </div>
 <div>
