--- a/WebApp/wwwroot/css/gay.css
+++ b/WebApp/wwwroot/css/gay.css
@@ -40,4 +40,4 @@
   background-color: deeppink;
 }
 
-/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///C:/mvc/WebApp/wwwroot/Styles/gay.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAGA;EACI;;AAII;EACI;EACA;EACA;;AAEA;EACI;EACA;EACA;;AAIR;EACI;EACA;EACA;;AAEA;EACI;EACA;EACA;;AAOR;EACI;;AAGJ;EACI;;AAGJ;EACI;;AAKJ;EACI;;AAGJ;EACI;;AAGJ;EACI%22%7D */
+/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///D:/STUDIA/Semestr%25205/MVC/PS/Projekt/PortalAukcyjny/WebApp/wwwroot/Styles/gay.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAGA;EACI;;AAII;EACI;EACA;EACA;;AAEA;EACI;EACA;EACA;;AAIR;EACI;EACA;EACA;;AAEA;EACI;EACA;EACA;;AAOR;EACI;;AAGJ;EACI;;AAGJ;EACI;;AAKJ;EACI;;AAGJ;EACI;;AAGJ;EACI%22%7D */
