--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -271,3 +271,11 @@ input[type=file] {
         }
     }
 }
+
+
+.visit--counter{
+    min-width: 5dp;
+    text-size-adjust:auto 200%;
+    display: flex;
+    align-self:start;
+}
