--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -246,8 +246,13 @@ input[type=file] {
 }
 
 .visit--counter {
-  min-width: 5dp;
-  text-size-adjust: auto 200%;
   display: flex;
   align-self: start;
+  font-size: 1.5em;
+}
+.visit--counter svg {
+  width: 4vw;
+  height: 4vh;
+  margin-right: -0.8vw;
+  padding-bottom: 0.6vh;
 }
