--- a/WebApp/Views/Auctions/Details.cshtml
+++ b/WebApp/Views/Auctions/Details.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Auction Details";
+
+    var result = ViewBag.result;
 }
 
 <h1>Details</h1>
@@ -58,9 +60,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Product.ProductId)
         </dd>
+
     </dl>
 </div>
+
+<div>
+    <span class="text-danger">
+        @result
+    </span>
+</div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.AuctionId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List</a> |
+    @Html.ActionLink("Observe", "ObservAuction", "Auctions", new { id = @Model?.AuctionId })
 </div>
