--- a/WebApp/Views/ObservedAuctions/Details.cshtml
+++ b/WebApp/Views/ObservedAuctions/Details.cshtml
@@ -32,7 +32,7 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("UnSubscribe", "Delete", new { aId = Model?.AuctionId, uId = Model?.UserId }) |
     <a asp-action="Index">Back to List</a>
 </div>
 </body>
