--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -315,3 +315,47 @@ input[type=file] {
 .modal-dialog{
     max-width: 380px;
 }
+
+.container--breadcrumb {
+    list-style: none;
+    display: inline-flex;
+    align-content: start;
+    a {
+        text-decoration: none;
+        width: max-content;
+        height: max-content;
+        
+        &:hover{
+            opacity: 70%;
+        }
+    }
+
+    ol{
+        display: inline-flex;
+        align-content: start;
+        justify-content: start;
+    }
+
+    li {
+        overflow: hidden;
+    }
+
+    .breadcrumb--item{
+
+        &::after{
+            content: ">";
+            margin-left: 0.2vw;
+            margin-right: 0.2vw;
+        }
+
+        &:last-child{
+            
+            &::after{
+                content: "";
+            }
+        }
+
+    }
+
+    
+}
