--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -283,5 +283,34 @@ input[type=file] {
 
 .modal-dialog {
   max-width: 380px;
+}
 
+.container--breadcrumb {
+  list-style: none;
+  display: inline-flex;
+  align-content: start;
+}
+.container--breadcrumb a {
+  text-decoration: none;
+  width: max-content;
+  height: max-content;
+}
+.container--breadcrumb a:hover {
+  opacity: 70%;
+}
+.container--breadcrumb ol {
+  display: inline-flex;
+  align-content: start;
+  justify-content: start;
+}
+.container--breadcrumb li {
+  overflow: hidden;
+}
+.container--breadcrumb .breadcrumb--item::after {
+  content: ">";
+  margin-left: 0.2vw;
+  margin-right: 0.2vw;
+}
+.container--breadcrumb .breadcrumb--item:last-child::after {
+  content: "";
 }
