--- a/WebApp/Views/ObservedAuctions/Details.cshtml
+++ b/WebApp/Views/ObservedAuctions/Details.cshtml
@@ -1,39 +1,40 @@
 ﻿@model WebApp.Models.ObservedAuction
 
 @{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Details";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-
-<div>
-    <h4>ObservedAuction</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.UserId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Auction)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Auction.Title)
-        </dd>
-    </dl>
+<div class="form--container container">
+    <div class="form--heading">
+        <h3 class="text--secondary">Subscription details</h3>
+    </div>
 </div>
-<div>
-    @Html.ActionLink("UnSubscribe", "Delete", new { aId = Model?.AuctionId, uId = Model?.UserId }) |
-    <a asp-action="Index">Back to List</a>
+<div class="row">
+    <div class="col-md-3 col-0"></div>
+        <div class="col-md-6">
+        <h4>ObservedAuction</h4>
+        <hr />
+        <dl class="row">
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.User)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.User.UserId)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Auction)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Auction.Title)
+            </dd>
+        </dl>
+        <div class="form--bottom--container">
+            <div class="form--buttons">
+            @Html.ActionLink("UnSubscribe", "Delete", new { aId = Model?.AuctionId, uId = Model?.UserId }, new {@class="button button--secondary button--rounded"})
+            <a asp-action="Index" class="button button--secondary button--rounded">Back to List</a>
+            </div>
+        </div>
+
+        <div class="col-md-3 col-0"></div>
+    </div>
 </div>
-</body>
-</html>
