--- a/WebApp/Views/Categories/Create.cshtml
+++ b/WebApp/Views/Categories/Create.cshtml
@@ -1,37 +1,39 @@
 ﻿@model WebApp.Models.Category
 
 @{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Create";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
 
-<h4>Category</h4>
-<hr />
+
+
+<div class="form--container container">
+    <div class="form--heading">
+        <h3 class="text--secondary">Add Category</h3>
+    </div>
+</div>
 <div class="row">
-    <div class="col-md-4">
+<div class="col-md-3 col-0"></div>
+    <div class="col-md-6">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control--label form--label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ParentCategoryId" class="control-label"></label>
-                <select asp-for="ParentCategoryId" class ="form-control" asp-items="ViewBag.ParentCategoryId"></select>
+                <label asp-for="ParentCategoryId" class="control--label form--label"></label>
+                <select asp-for="ParentCategoryId" class="control--input form--select" asp-items="ViewBag.ParentCategoryId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="button button--rounded button--secondary" />
             </div>
         </form>
+        
+        <div class="col-md-3 col-0"></div>
+
     </div>
 </div>
 
@@ -42,5 +44,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-</body>
-</html>
+
