--- a/WebApp/Views/Categories/Create.cshtml
+++ b/WebApp/Views/Categories/Create.cshtml
@@ -5,9 +5,6 @@
 }
 
 
-
-
-
 <div class="form--container container">
     <div class="form--heading">
         <h3 class="text--secondary">Add Category</h3>
@@ -16,29 +13,28 @@
 <div class="row">
 <div class="col-md-3 col-0"></div>
     <div class="col-md-6">
-        <form asp-action="Create">
+        <form asp-action="Create" class="form--content">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form--group">
                 <label asp-for="Name" class="control--label form--label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="control--input form--input" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form--group">
                 <label asp-for="ParentCategoryId" class="control--label form--label"></label>
-                <select asp-for="ParentCategoryId" class="control--input form--select" asp-items="ViewBag.ParentCategoryId"></select>
+                <select asp-for="ParentCategoryId" class="control--input form--select" asp-items="ViewBag.ParentCategoryId">
+                    <option disabled selected> Click to select parent Category </option>
+                </select>
             </div>
-            <div class="form-group">
+            <div class="form--buttons">
                 <input type="submit" value="Create" class="button button--rounded button--secondary" />
+                <a asp-action="Index" class="button button--rounded button--secondary">Back to List</a>
+
             </div>
         </form>
         
         <div class="col-md-3 col-0"></div>
-
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
