--- a/WebApp/Views/Categories/Delete.cshtml
+++ b/WebApp/Views/Categories/Delete.cshtml
@@ -1,42 +1,41 @@
 ﻿@model WebApp.Models.Category
 
 @{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Delete";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParentCategory)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentCategory.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CategoryId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="form--container container">
+    <div class="form--heading">
+    <h3 class="text--secondary">Are you sure you want to delete category?</h3>
+    </div>
 </div>
-</body>
-</html>
+<div class="row">
+    <div class="col-md-3 col-0"></div>
+    <div class="col-md-6">
+        <dl class="row">
+            <dt class = "col-sm-4">
+                @Html.DisplayNameFor(model => model.ParentCategory)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.ParentCategory.Name)
+            </dd>
+            <br/>
+            <dt class = "col-sm-4">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+        </dl>
+    
+        <form asp-action="Delete" class="form--buttons">
+            <input type="hidden" asp-for="CategoryId" />
+            <input type="submit" value="Delete" class="button button--rounded button--secondary" />
+            <a asp-action="Index" class="button button--rounded button--secondary">Back to List</a>
+        </form>
+        <div class="col-md-3 col-0"></div>
+
+    </div>
+</div>
+
