--- a/WebApp/Views/Categories/Details.cshtml
+++ b/WebApp/Views/Categories/Details.cshtml
@@ -1,39 +1,40 @@
 ﻿@model WebApp.Models.Category
 
 @{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Details";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
+<div class="form--contianer container">
+    <div class="form--heading">
+        <h3 class="text--secondary">Category Details</h3>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-3 col-0"></div>
+    <div class="col-md-6">
+        <dl class="row">
+            <dt class = "col-sm-4">
+                @Html.DisplayNameFor(model => model.ParentCategory)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.ParentCategory.Name)
+            </dd>
+            
+            <br/>
 
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParentCategory)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentCategory.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
+            <dt class = "col-sm-4">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+        </dl>
+        <div class="form--buttons">
+            <a asp-action="Edit" asp-route-id="@Model?.CategoryId" class="button button--rounded button--secondary">Edit</a>
+            <a asp-action="Index" class="button button--rounded button--secondary">Back to List</a>
+        </div>
+    </div>
+    <div class="col-md-3 col-0"></div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.CategoryId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
-</body>
-</html>
+
