--- a/WebApp/Views/Categories/Edit.cshtml
+++ b/WebApp/Views/Categories/Edit.cshtml
@@ -1,48 +1,47 @@
 ﻿@model WebApp.Models.Category
 
 @{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Edit";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
 
-<h4>Category</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CategoryId" />
-            <div class="form-group">
-                <label asp-for="ParentCategoryId" class="control-label"></label>
-                <select asp-for="ParentCategoryId" class="form-control" asp-items="ViewBag.ParentCategoryId"></select>
-                <span asp-validation-for="ParentCategoryId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="form--contianer container">
+    <div class="form--heading">
+        <h3 class="text--secondary">Edit Category</h3>
+    </div>
+    <div class="row" onload="displayDateDialog()">
+        <div class="col-md-3 col-0"></div>
+        <div class="col-md-6">
+            <form asp-action="Edit" class="form-content">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="CategoryId" />
+
+                <div class="form--group">
+                    <label asp-for="ParentCategoryId" class="control-label form--label"></label>
+                    <select asp-for="ParentCategoryId" class="control--input form--input" asp-items="ViewBag.ParentCategoryId"></select>
+                    <span asp-validation-for="ParentCategoryId" class="text-danger"></span>
+                </div>
+                
+                <div class="form--group">
+                    <label asp-for="Name" class="control-label form--label"></label>
+                    <input asp-for="Name" class="control--input form--input" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                
+                <div class="form--buttons">
+                    <input type="submit" value="Save" class="button button--rounded button--secondary" />
+                    <a asp-action="Index" class="button button--rounded button--secondary">Back to List</a>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-</body>
-</html>
+
