Revert "added Command pattern?"
This reverts commit 31bbb6d0dca3b29c0856d07f06b231dab5b9290b.

--- a/WebApp/Views/Auctions/Details.cshtml
+++ b/WebApp/Views/Auctions/Details.cshtml
@@ -73,5 +73,5 @@
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.AuctionId">Edit</a> |
     <a asp-action="Index">Back to List</a> |
-    @Html.ActionLink("Observe", "ObservAuction", null, new { id = @Model?.AuctionId })
+    @Html.ActionLink("Observe", "ObservAuction", "Auctions", new { id = @Model?.AuctionId })
 </div>
