added logged user home page css

--- a/WebApp/Views/Authentication/_LoginModal.cshtml
+++ b/WebApp/Views/Authentication/_LoginModal.cshtml
@@ -7,7 +7,7 @@
             <h4 class="text--primary .form--group">@Auth.Login</h4>
         </div>
         <div class="modal-body">
-        <form id="loginForm" action="/Authentication/SendResetPasswordMail" method="post" class="form--content">
+        <form id="loginForm" action="/Authentication/Login" method="post" class="form--content">
                 <div class="row">
                     <div class="form--group" style="margin-bottom:0;">
                         <input type="text" placeholder="@Auth.Email" class="control--input form--input" id="loginFormMail" name="mail" value="" />
