--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -2,7 +2,147 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+@*
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+*@
+
+
+<div class="home--container">
+
+    <div class="box--container">
+
+        <div class="box box--horizontal">
+            <div class="box box--content">
+                <h1 class="box--text">Welcome, User Name</h1>
+            </div>
+
+            <div class="box box--content box--center">
+                <a asp-action="Create" asp-controller="Auctions" class="button button--secondary button--rounded"> New Auction &nbsp &nbsp &nbsp &nbsp + </a>
+            </div>
+
+        </div>
+
+
+        <div class="box box--horizontal">
+
+            <div class="box box--vertical">
+                <span class="box--text">
+                    My auctions
+                </span>
+                <div class="box-shadow box--content">
+                    <hr />
+                    <div class="box--item">
+                        item 1
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        item 2
+                    </div>
+                    <hr />
+
+                    <div class="box--item">
+                        item 3
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        item 3
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        item 3
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        item 3
+                    </div>
+
+                </div>
+
+            </div>
+
+
+            <div class="box box--vertical">
+                <span class="box--text">
+                    Observed
+                </span>
+                <div class="box-shadow box--content">
+                    @*<hr />
+                    <div class="box--item">
+                        item 1
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        item 2
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        item 3
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        item 3
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        item 3
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        item 3
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        item 3
+                    </div>*@
+                </div>
+        
+            </div>
+
+
+            <div class="box box--vertical">
+                <span class="box--text">
+                    My bids
+                </span>
+                <div class="box-shadow box--content">
+                    <hr />
+                    <div class="box--item">
+                        <div class="box--item--title">Tilte</div>
+                        <div class="box--item--price">$1929,99</div>
+                        <div class="box--item--date">21.11.2022 -- ends in 3h</div>
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        <div class="box--item--title">Tilte2saffadsfadgafdsasdsa</div>
+                        <div class="box--item--price">$9,99</div>
+                        <div class="box--item--date">21.11.2022 -- ends in 3h</div>
+                    </div>
+                    <hr />
+                    <div class="box--item">
+                        <div class="box--item--title">Tilte3</div>
+                        <div class="box--item--price">$9,99</div>
+                        <div class="box--item--date">20.11.2022 -- ended</div>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    
+
+
 </div>
+
+
+
