--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -417,3 +417,39 @@ input[type=file] {
 
 }
 
+.fake--dropdown {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid;
+    width: 52px;
+    position: absolute;
+    border-radius: 2px;
+    margin-top: 2.5px;
+    button {
+        margin-bottom: 0;
+        margin-top: 0;
+        border: 0;
+        width: 50px;
+
+        &:hover {
+            opacity: 50%;
+        }
+    }
+
+    &--button {
+        margin-bottom: 0;
+        margin-top: 0;
+        border: 1px solid;
+        width: 50px;
+        border-radius: 50%;
+        aspect-ratio: 1 / 1;
+
+        &:hover {
+            opacity: 50%;
+        }
+    }
+}
+
+.theme--form{
+    margin-right: 2vw;
+}
