--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -354,3 +354,37 @@ input[type=file] {
   text-decoration: none;
   color: none;
 }
+
+.fake--dropdown {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid;
+  width: 52px;
+  position: absolute;
+  border-radius: 2px;
+  margin-top: 2.5px;
+}
+.fake--dropdown button {
+  margin-bottom: 0;
+  margin-top: 0;
+  border: 0;
+  width: 50px;
+}
+.fake--dropdown button:hover {
+  opacity: 50%;
+}
+.fake--dropdown--button {
+  margin-bottom: 0;
+  margin-top: 0;
+  border: 1px solid;
+  width: 50px;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+}
+.fake--dropdown--button:hover {
+  opacity: 50%;
+}
+
+.theme--form {
+  margin-right: 2vw;
+}
